Add enum tests